update with correct computation logic and add readme file

--- a/index.html
+++ b/index.html
@@ -11,36 +11,37 @@
   <body>
     <div class="cal">
       <h1>Calculator</h1>
-      <form action="#">
+      <form onsubmit="return false;">
         <div id="input">0</div>
-        <div class="results">hgg</div>
+        <div class="results">0</div>
         <div class="buttons">
           <div class="rows">
-            <div ><button id="1">1</button></div>
-            <div ><button id="2">2</button></div>
-            <div ><button id="3">3</button></div>
-            <div ><button id="+">+</button></div>
+            <div><button type="button" id="1">1</button></div>
+            <div><button type="button" id="2">2</button></div>
+            <div><button type="button" id="3">3</button></div>
+            <div><button type="button" id="+">+</button></div>
           </div>
           <div class="rows">
-            <div ><button id="4">4</button></div>
-            <div ><button id="5">5</button></div>
-            <div ><button id="6">6</button></div>
-            <div ><button id="-">-</button></div>
+            <div><button type="button" id="4">4</button></div>
+            <div><button type="button" id="5">5</button></div>
+            <div><button type="button" id="6">6</button></div>
+            <div><button type="button" id="-">-</button></div>
           </div>
           <div class="rows">
-            <div ><button id="7">7</button></div>
-            <div ><button id="8">8</button></div>
-            <div ><button id="9">9</button></div>
-            <div ><button id="x">x</button></div>
+            <div><button type="button" id="7">7</button></div>
+            <div><button type="button" id="8">8</button></div>
+            <div><button type="button" id="9">9</button></div>
+            <div><button type="button" id="x">x</button></div>
           </div>
           <div class="rows">
-            <div ><button id="0">0</button></div>
-            <div ><button id=".">.</button></div>
-            <div ><button id="/">/</button></div>
-            <div ><button id="x>">x></button></div>
+            <div><button type="button" id="0">0</button></div>
+            <div><button type="button" id=".">.</button></div>
+            <div><button type="button" id="/">/</button></div>
+            <div><button type="button" id="del">⌫</button></div>
           </div>
           <div class="rows">
-            <div i><button id="=">=</button></div>
+            <div><button type="button" id="C">C</button></div>
+            <div><button type="button" id="=">=</button></div>
           </div>
         </div>
       </form>
